<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ONLance</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="pontosCorrido">Pontos Corridos</string>
    <string name="pontosCorrido_UPPER">PONTOS CORRIDOS</string>
    <string name="campeonato">Campeonato</string>
    <string name="campeonato_UPPER">CAMPEONATO</string>
    <string name="configuracao_partida">Configuração da Partida</string>
    <string name="ajustes_partida_UPPER">AJUSTES DA PARTIDA</string>
    <string name="copa">Copa</string>
    <string name="opcoes">Opções</string>
    <string name="salvar">Salvar</string>
    <string name="salvar_UPPER">SALVAR</string>
    <string name="novo_grupo_UPPER">NOVO GRUPO</string>
    <string name="comunidade">Comunidade</string>
    <string name="comunidade_UPPER">COMUNIDADE</string>
    <string name="add_new_group">Adicionar novo Grupo</string>
    <string name="gratuito">É gratuito e sempre será.</string>
    <string name="add_member">Adicionar Membro</string>
    <string name="escolher_senha">Escolher senha</string>
    <string name="grupos">Grupos</string>
    <string name="grupos_UPPER">GRUPOS</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="cartao_vermelho">Cartão Vermelho</string>
    <string name="criar_conta">Criar uma conta</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cadastrar_UPPER">CADASTRAR</string>
    <string name="criar_conta_UPPER">CRIAR CONTA</string>
    <string name="cartao_amarelo">Cartão Amarelo</string>
    <string name="gols_default">02</string>
    <string name="email">Email</string>
    <string name="email_ou_login">Email / Login</string>
    <string name="tempo_default">10</string>
    <string name="copa_UPPER">COPA</string>
    <string name="selecao_times">Seleção de Times</string>
    <string name="selecao_jogadores_UPPER">SELEÇÃO DE JOGADORES</string>
    <string name="por_equipe">Por Equipe</string>
    <string name="por_equipe_hint">Não esqueça, goleiro também é um jogador!</string>
    <string name="amistoso">Amistoso</string>
    <string name="amistoso_UPPER">AMISTOSO</string>
    <string name="quantJogadores">Quantidade de Jogadores</string>
    <string name="quantJogadores_UPPER">QUANTIDADE DE JOGADORES</string>
    <string name="terminoPartida">O jogo termina quando</string>
    <string name="terminoPartida_UPPER">QUANDO O JOGO TERMINA?</string>
    <string name="tempo">Tempo</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_hint">Compartilhe sua diversão com seus amigos!</string>
    <string name="gol">GOL</string>
    <string name="placar_0">0</string>
    <string name="plus">+</string>
    <string name="ou">ou</string>
    <string name="partida_UPPER">PARTIDA</string>
    <string name="por_gol">Por Gol</string>
    <string name="por_gol_hint">Vence quem fizer o(s) gol(s) primeiro!</string>
    <string name="por_tempo">Por Tempo</string>
    <string name="por_tempo_hint">Escolha o tempo máximo em minutos!</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="menu_principal_UPPER">MENU PRINCIPAL</string>
    <string name="entrar_UPPER">ENTRAR</string>
    <string name="esqueceu_senha">Esqueceu sua senha?</string>
    <string name="faca_cadastro">Faça seu cadastro!</string>
    <string name="nome_usuario">Nome de usuário</string>
    <string name="entrar_face">Entrar com o Facebook</string>
    <string name="app_id">1538220866423022</string>
    <string name="encerramentoPartida">Encerramento da Partida</string>
    <string name="compartilhamento_UPPER">COMPARTILHAMENTO</string>
    <string name="prosseguir">Prosseguir</string>
    <string name="facebook_app_id">300591123482638</string>
    <string name="time_fragment">Times</string>
    <string name="jogador_fragment">Jogadores</string>
    <string name="prosseguir_UPPER">PROSSEGUIR</string>
    <string name="log_partida_UPPER">LOG DA PARTIDA</string>
    <string name="hello">Hello World, DashBoardActivity!</string>
    <string name="home">Nome do seu programa</string>
    <string name="consulta">Consulta</string>
    <string name="sobre">Sobre</string>
    <string name="config">Config.</string>
    <string name="venda">Vendas</string>
    <string name="rodape">Mensagem de rodapé</string>
    <string name="amigos">Amigos</string>
    <string name="times">Times</string>
    <string name="configuracao">Configurações</string>
    <string name="partida">Partidas</string>
    <string name="partida_rapida">Partida Rápida</string>
    <string name="time">Times</string>
    <string name="estatistica">Estatísticas</string>
    <string name="termos_condicoes">Ao continuar, você também aceita as <u><b>Condições de serviço</b></u>, a <u><b>Política de privacidade</b></u> e as <u><b>Condições de serviço</b></u> para celular do Olho no Lance.</string>
    <string name="servidor_desenvolvimento">http://192.168.25.11:8081/OnLanceService/service</string>
	<string name="condicoes_servicos">Ao continuar, você também aceita as &lt;u>&lt;b>Condições de serviço&lt;/b>&lt;/u>, a &lt;u>&lt;b>Política de privacidade&lt;/b>&lt;/u> e as &lt;u>&lt;b>Condições de serviço&lt;/b>&lt;/u> para celular do Olho no Lance.</string>
    <string name="msg_salvar_jogador">Jogador cadastrado com sucesso!</string>
    <string name="msg_email_invalido">E-mail inválido!</string>
    <string name="msg_falha_conexao_com_internet">Falha ao tentar conectar com a Internet! Tente novamente.</string>
    <string name="msg_atualizar_jogador">Jogador atualizado com sucesso!</string>
    <string name="msg_deletar_jogador">Jogador deletado com sucesso!</string>
    <string name="peladas">Peladas</string>
    <string name="nome_evento_hint">Qual o nome?</string>
    <string name="local_hint">Onde?</string>
    <string name="data_evento_hint">Quando?</string>
    <string name="horario_evento_hint">Que horas?</string>
    <string name="recado_para_galera_hint">Algum recado para galera?</string>
    <string name="criar_evento_UPPER">CRIAR EVENTO</string>
    
</resources>